// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<EditViewDialog /> does not render if show is false 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <EditViewDialog
    closeHandler={[Function]}
    idToEdit="1"
    saveViewHandler={[Function]}
    show={false}
    views={
        Array [
            Object {
              "channelId": "twitch",
              "extension": Object {
                "authorName": "test",
                "bitsEnabled": false,
                "clientId": "mockClientId",
                "description": "description",
                "iconUrl": "iconUrl",
                "id": "id",
                "name": "name",
                "requestIdentityLink": false,
                "sku": "sku",
                "state": "Released",
                "summary": "summary",
                "token": "token",
                "vendorCode": "vendorCode",
                "version": "0.1",
                "views": Object {
                  "component": Object {
                    "aspectHeight": 3000,
                    "aspectWidth": 2500,
                    "canLinkExternalContent": false,
                    "viewerUrl": "test",
                    "zoom": false,
                    "zoomPixels": 100,
                  },
                  "config": Object {
                    "canLinkExternalContent": false,
                    "viewerUrl": "test",
                  },
                  "liveConfig": Object {
                    "canLinkExternalContent": false,
                    "viewerUrl": "test",
                  },
                  "mobile": Object {
                    "viewerUrl": "test",
                  },
                  "panel": Object {
                    "canLinkExternalContent": false,
                    "height": 300,
                    "viewerUrl": "test",
                  },
                  "videoOverlay": Object {
                    "canLinkExternalContent": false,
                    "viewerUrl": "test",
                  },
                },
                "whitelistedConfigUrls": Array [
                  "foo",
                ],
                "whitelistedPanelUrls": Array [
                  "bar",
                ],
              },
              "features": Object {
                "isChatEnabled": true,
              },
              "id": "1",
              "isPopout": false,
              "linked": false,
              "mode": "viewer",
              "orientation": "Portrait",
              "role": "Logged-Out Viewer",
              "type": "component",
              "x": 10,
              "y": 10,
            },
            Object {
              "channelId": "twitch",
              "extension": Object {
                "authorName": "test",
                "bitsEnabled": false,
                "clientId": "mockClientId",
                "description": "description",
                "iconUrl": "iconUrl",
                "id": "id",
                "name": "name",
                "requestIdentityLink": false,
                "sku": "sku",
                "state": "Released",
                "summary": "summary",
                "token": "token",
                "vendorCode": "vendorCode",
                "version": "0.1",
                "views": Object {
                  "component": Object {
                    "aspectHeight": 3000,
                    "aspectWidth": 2500,
                    "canLinkExternalContent": false,
                    "viewerUrl": "test",
                    "zoom": false,
                    "zoomPixels": 100,
                  },
                  "config": Object {
                    "canLinkExternalContent": false,
                    "viewerUrl": "test",
                  },
                  "liveConfig": Object {
                    "canLinkExternalContent": false,
                    "viewerUrl": "test",
                  },
                  "mobile": Object {
                    "viewerUrl": "test",
                  },
                  "panel": Object {
                    "canLinkExternalContent": false,
                    "height": 300,
                    "viewerUrl": "test",
                  },
                  "videoOverlay": Object {
                    "canLinkExternalContent": false,
                    "viewerUrl": "test",
                  },
                },
                "whitelistedConfigUrls": Array [
                  "foo",
                ],
                "whitelistedPanelUrls": Array [
                  "bar",
                ],
              },
              "features": Object {
                "isChatEnabled": true,
              },
              "id": "2",
              "isPopout": false,
              "linked": false,
              "mode": "viewer",
              "orientation": "Portrait",
              "role": "Logged-Out Viewer",
              "type": "component",
              "x": 10,
              "y": 10,
            },
          ]
    }
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): null,
  Symbol(enzyme.__nodes__): Array [
    null,
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`<EditViewDialog /> renders correctly 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <EditViewDialog
    closeHandler={[Function]}
    idToEdit="1"
    saveViewHandler={[Function]}
    show={true}
    views={
        Array [
            Object {
              "channelId": "twitch",
              "extension": Object {
                "authorName": "test",
                "bitsEnabled": false,
                "clientId": "mockClientId",
                "description": "description",
                "iconUrl": "iconUrl",
                "id": "id",
                "name": "name",
                "requestIdentityLink": false,
                "sku": "sku",
                "state": "Released",
                "summary": "summary",
                "token": "token",
                "vendorCode": "vendorCode",
                "version": "0.1",
                "views": Object {
                  "component": Object {
                    "aspectHeight": 3000,
                    "aspectWidth": 2500,
                    "canLinkExternalContent": false,
                    "viewerUrl": "test",
                    "zoom": false,
                    "zoomPixels": 100,
                  },
                  "config": Object {
                    "canLinkExternalContent": false,
                    "viewerUrl": "test",
                  },
                  "liveConfig": Object {
                    "canLinkExternalContent": false,
                    "viewerUrl": "test",
                  },
                  "mobile": Object {
                    "viewerUrl": "test",
                  },
                  "panel": Object {
                    "canLinkExternalContent": false,
                    "height": 300,
                    "viewerUrl": "test",
                  },
                  "videoOverlay": Object {
                    "canLinkExternalContent": false,
                    "viewerUrl": "test",
                  },
                },
                "whitelistedConfigUrls": Array [
                  "foo",
                ],
                "whitelistedPanelUrls": Array [
                  "bar",
                ],
              },
              "features": Object {
                "isChatEnabled": true,
              },
              "id": "1",
              "isPopout": false,
              "linked": false,
              "mode": "viewer",
              "orientation": "Portrait",
              "role": "Logged-Out Viewer",
              "type": "component",
              "x": 10,
              "y": 10,
            },
            Object {
              "channelId": "twitch",
              "extension": Object {
                "authorName": "test",
                "bitsEnabled": false,
                "clientId": "mockClientId",
                "description": "description",
                "iconUrl": "iconUrl",
                "id": "id",
                "name": "name",
                "requestIdentityLink": false,
                "sku": "sku",
                "state": "Released",
                "summary": "summary",
                "token": "token",
                "vendorCode": "vendorCode",
                "version": "0.1",
                "views": Object {
                  "component": Object {
                    "aspectHeight": 3000,
                    "aspectWidth": 2500,
                    "canLinkExternalContent": false,
                    "viewerUrl": "test",
                    "zoom": false,
                    "zoomPixels": 100,
                  },
                  "config": Object {
                    "canLinkExternalContent": false,
                    "viewerUrl": "test",
                  },
                  "liveConfig": Object {
                    "canLinkExternalContent": false,
                    "viewerUrl": "test",
                  },
                  "mobile": Object {
                    "viewerUrl": "test",
                  },
                  "panel": Object {
                    "canLinkExternalContent": false,
                    "height": 300,
                    "viewerUrl": "test",
                  },
                  "videoOverlay": Object {
                    "canLinkExternalContent": false,
                    "viewerUrl": "test",
                  },
                },
                "whitelistedConfigUrls": Array [
                  "foo",
                ],
                "whitelistedPanelUrls": Array [
                  "bar",
                ],
              },
              "features": Object {
                "isChatEnabled": true,
              },
              "id": "2",
              "isPopout": false,
              "linked": false,
              "mode": "viewer",
              "orientation": "Portrait",
              "role": "Logged-Out Viewer",
              "type": "component",
              "x": 10,
              "y": 10,
            },
          ]
    }
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <div
          className="edit-view__background"
/>,
        <div
          className="edit-view__dialog-component"
>
          <div
                    className="dialog__top-bar-container"
          >
                    <div
                              className="top-bar-container__title"
                    >
                               Edit View 
                    </div>
                    <div
                              className="top-bar-container__escape"
                              onClick={[Function]}
                    >
                              <img
                                        alt="Close"
                                        src="close_icon.png"
                              />
                    </div>
          </div>
          <hr
                    className="dialog__divider"
          />
          <div
                    className="edit-view__content"
          >
                    <div
                              className="type-and-size-container__type-title"
                    >
                              Position (%)
                    </div>
                    <div
                              className="overlay-custom-container"
                    >
                              <div
                                        className="overlay-custom-container"
                              >
                                        <div
                                                  className="edit-subcontainer__input"
                                        >
                                                  <label
                                                            className="inputs__option-label"
                                                  >
                                                            X
                                                  </label>
                                                  <input
                                                            name="x"
                                                            onChange={[Function]}
                                                            type="text"
                                                            value={10}
                                                  />
                                        </div>
                                        <div
                                                  className="edit-subcontainer__input"
                                        >
                                                  <label
                                                            className="inputs__option-label"
                                                  >
                                                            Y
                                                  </label>
                                                  <input
                                                            name="y"
                                                            onChange={[Function]}
                                                            type="text"
                                                            value={10}
                                                  />
                                        </div>
                              </div>
                    </div>
          </div>
          <hr
                    className="dialog__divider"
          />
          <div
                    className="dialog_bottom-bar"
          >
                    <div
                              className="bottom-bar__save"
                              onClick={[Function]}
                    >
                               Save 
                    </div>
                    <div
                              className="bottom-bar__cancel"
                              onClick={[Function]}
                    >
                               Cancel 
                    </div>
          </div>
</div>,
      ],
      "className": "edit-view",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "className": "edit-view__background",
        },
        "ref": null,
        "rendered": null,
        "type": "div",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <div
              className="dialog__top-bar-container"
>
              <div
                            className="top-bar-container__title"
              >
                             Edit View 
              </div>
              <div
                            className="top-bar-container__escape"
                            onClick={[Function]}
              >
                            <img
                                          alt="Close"
                                          src="close_icon.png"
                            />
              </div>
</div>,
            <hr
              className="dialog__divider"
/>,
            <div
              className="edit-view__content"
>
              <div
                            className="type-and-size-container__type-title"
              >
                            Position (%)
              </div>
              <div
                            className="overlay-custom-container"
              >
                            <div
                                          className="overlay-custom-container"
                            >
                                          <div
                                                        className="edit-subcontainer__input"
                                          >
                                                        <label
                                                                      className="inputs__option-label"
                                                        >
                                                                      X
                                                        </label>
                                                        <input
                                                                      name="x"
                                                                      onChange={[Function]}
                                                                      type="text"
                                                                      value={10}
                                                        />
                                          </div>
                                          <div
                                                        className="edit-subcontainer__input"
                                          >
                                                        <label
                                                                      className="inputs__option-label"
                                                        >
                                                                      Y
                                                        </label>
                                                        <input
                                                                      name="y"
                                                                      onChange={[Function]}
                                                                      type="text"
                                                                      value={10}
                                                        />
                                          </div>
                            </div>
              </div>
</div>,
            false,
            <hr
              className="dialog__divider"
/>,
            <div
              className="dialog_bottom-bar"
>
              <div
                            className="bottom-bar__save"
                            onClick={[Function]}
              >
                             Save 
              </div>
              <div
                            className="bottom-bar__cancel"
                            onClick={[Function]}
              >
                             Cancel 
              </div>
</div>,
          ],
          "className": "edit-view__dialog-component",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <div
                  className="top-bar-container__title"
>
                   Edit View 
</div>,
                <div
                  className="top-bar-container__escape"
                  onClick={[Function]}
>
                  <img
                                    alt="Close"
                                    src="close_icon.png"
                  />
</div>,
              ],
              "className": "dialog__top-bar-container",
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": " Edit View ",
                  "className": "top-bar-container__title",
                },
                "ref": null,
                "rendered": " Edit View ",
                "type": "div",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": <img
                    alt="Close"
                    src="close_icon.png"
/>,
                  "className": "top-bar-container__escape",
                  "onClick": [Function],
                },
                "ref": null,
                "rendered": Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "alt": "Close",
                    "src": "close_icon.png",
                  },
                  "ref": null,
                  "rendered": null,
                  "type": "img",
                },
                "type": "div",
              },
            ],
            "type": "div",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "className": "dialog__divider",
            },
            "ref": null,
            "rendered": null,
            "type": "hr",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <div
                  className="type-and-size-container__type-title"
>
                  Position (%)
</div>,
                <div
                  className="overlay-custom-container"
>
                  <div
                                    className="overlay-custom-container"
                  >
                                    <div
                                                      className="edit-subcontainer__input"
                                    >
                                                      <label
                                                                        className="inputs__option-label"
                                                      >
                                                                        X
                                                      </label>
                                                      <input
                                                                        name="x"
                                                                        onChange={[Function]}
                                                                        type="text"
                                                                        value={10}
                                                      />
                                    </div>
                                    <div
                                                      className="edit-subcontainer__input"
                                    >
                                                      <label
                                                                        className="inputs__option-label"
                                                      >
                                                                        Y
                                                      </label>
                                                      <input
                                                                        name="y"
                                                                        onChange={[Function]}
                                                                        type="text"
                                                                        value={10}
                                                      />
                                    </div>
                  </div>
</div>,
              ],
              "className": "edit-view__content",
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "Position (%)",
                  "className": "type-and-size-container__type-title",
                },
                "ref": null,
                "rendered": "Position (%)",
                "type": "div",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": <div
                    className="overlay-custom-container"
>
                    <div
                                        className="edit-subcontainer__input"
                    >
                                        <label
                                                            className="inputs__option-label"
                                        >
                                                            X
                                        </label>
                                        <input
                                                            name="x"
                                                            onChange={[Function]}
                                                            type="text"
                                                            value={10}
                                        />
                    </div>
                    <div
                                        className="edit-subcontainer__input"
                    >
                                        <label
                                                            className="inputs__option-label"
                                        >
                                                            Y
                                        </label>
                                        <input
                                                            name="y"
                                                            onChange={[Function]}
                                                            type="text"
                                                            value={10}
                                        />
                    </div>
</div>,
                  "className": "overlay-custom-container",
                },
                "ref": null,
                "rendered": Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": Array [
                      <div
                        className="edit-subcontainer__input"
>
                        <label
                                                className="inputs__option-label"
                        >
                                                X
                        </label>
                        <input
                                                name="x"
                                                onChange={[Function]}
                                                type="text"
                                                value={10}
                        />
</div>,
                      <div
                        className="edit-subcontainer__input"
>
                        <label
                                                className="inputs__option-label"
                        >
                                                Y
                        </label>
                        <input
                                                name="y"
                                                onChange={[Function]}
                                                type="text"
                                                value={10}
                        />
</div>,
                    ],
                    "className": "overlay-custom-container",
                  },
                  "ref": null,
                  "rendered": Array [
                    Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "host",
                      "props": Object {
                        "children": Array [
                          <label
                            className="inputs__option-label"
>
                            X
</label>,
                          <input
                            name="x"
                            onChange={[Function]}
                            type="text"
                            value={10}
/>,
                        ],
                        "className": "edit-subcontainer__input",
                      },
                      "ref": null,
                      "rendered": Array [
                        Object {
                          "instance": null,
                          "key": undefined,
                          "nodeType": "host",
                          "props": Object {
                            "children": "X",
                            "className": "inputs__option-label",
                          },
                          "ref": null,
                          "rendered": "X",
                          "type": "label",
                        },
                        Object {
                          "instance": null,
                          "key": undefined,
                          "nodeType": "host",
                          "props": Object {
                            "name": "x",
                            "onChange": [Function],
                            "type": "text",
                            "value": 10,
                          },
                          "ref": null,
                          "rendered": null,
                          "type": "input",
                        },
                      ],
                      "type": "div",
                    },
                    Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "host",
                      "props": Object {
                        "children": Array [
                          <label
                            className="inputs__option-label"
>
                            Y
</label>,
                          <input
                            name="y"
                            onChange={[Function]}
                            type="text"
                            value={10}
/>,
                        ],
                        "className": "edit-subcontainer__input",
                      },
                      "ref": null,
                      "rendered": Array [
                        Object {
                          "instance": null,
                          "key": undefined,
                          "nodeType": "host",
                          "props": Object {
                            "children": "Y",
                            "className": "inputs__option-label",
                          },
                          "ref": null,
                          "rendered": "Y",
                          "type": "label",
                        },
                        Object {
                          "instance": null,
                          "key": undefined,
                          "nodeType": "host",
                          "props": Object {
                            "name": "y",
                            "onChange": [Function],
                            "type": "text",
                            "value": 10,
                          },
                          "ref": null,
                          "rendered": null,
                          "type": "input",
                        },
                      ],
                      "type": "div",
                    },
                  ],
                  "type": "div",
                },
                "type": "div",
              },
            ],
            "type": "div",
          },
          false,
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "className": "dialog__divider",
            },
            "ref": null,
            "rendered": null,
            "type": "hr",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <div
                  className="bottom-bar__save"
                  onClick={[Function]}
>
                   Save 
</div>,
                <div
                  className="bottom-bar__cancel"
                  onClick={[Function]}
>
                   Cancel 
</div>,
              ],
              "className": "dialog_bottom-bar",
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": " Save ",
                  "className": "bottom-bar__save",
                  "onClick": [Function],
                },
                "ref": null,
                "rendered": " Save ",
                "type": "div",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": " Cancel ",
                  "className": "bottom-bar__cancel",
                  "onClick": [Function],
                },
                "ref": null,
                "rendered": " Cancel ",
                "type": "div",
              },
            ],
            "type": "div",
          },
        ],
        "type": "div",
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <div
            className="edit-view__background"
/>,
          <div
            className="edit-view__dialog-component"
>
            <div
                        className="dialog__top-bar-container"
            >
                        <div
                                    className="top-bar-container__title"
                        >
                                     Edit View 
                        </div>
                        <div
                                    className="top-bar-container__escape"
                                    onClick={[Function]}
                        >
                                    <img
                                                alt="Close"
                                                src="close_icon.png"
                                    />
                        </div>
            </div>
            <hr
                        className="dialog__divider"
            />
            <div
                        className="edit-view__content"
            >
                        <div
                                    className="type-and-size-container__type-title"
                        >
                                    Position (%)
                        </div>
                        <div
                                    className="overlay-custom-container"
                        >
                                    <div
                                                className="overlay-custom-container"
                                    >
                                                <div
                                                            className="edit-subcontainer__input"
                                                >
                                                            <label
                                                                        className="inputs__option-label"
                                                            >
                                                                        X
                                                            </label>
                                                            <input
                                                                        name="x"
                                                                        onChange={[Function]}
                                                                        type="text"
                                                                        value={10}
                                                            />
                                                </div>
                                                <div
                                                            className="edit-subcontainer__input"
                                                >
                                                            <label
                                                                        className="inputs__option-label"
                                                            >
                                                                        Y
                                                            </label>
                                                            <input
                                                                        name="y"
                                                                        onChange={[Function]}
                                                                        type="text"
                                                                        value={10}
                                                            />
                                                </div>
                                    </div>
                        </div>
            </div>
            <hr
                        className="dialog__divider"
            />
            <div
                        className="dialog_bottom-bar"
            >
                        <div
                                    className="bottom-bar__save"
                                    onClick={[Function]}
                        >
                                     Save 
                        </div>
                        <div
                                    className="bottom-bar__cancel"
                                    onClick={[Function]}
                        >
                                     Cancel 
                        </div>
            </div>
</div>,
        ],
        "className": "edit-view",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "className": "edit-view__background",
          },
          "ref": null,
          "rendered": null,
          "type": "div",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <div
                className="dialog__top-bar-container"
>
                <div
                                className="top-bar-container__title"
                >
                                 Edit View 
                </div>
                <div
                                className="top-bar-container__escape"
                                onClick={[Function]}
                >
                                <img
                                                alt="Close"
                                                src="close_icon.png"
                                />
                </div>
</div>,
              <hr
                className="dialog__divider"
/>,
              <div
                className="edit-view__content"
>
                <div
                                className="type-and-size-container__type-title"
                >
                                Position (%)
                </div>
                <div
                                className="overlay-custom-container"
                >
                                <div
                                                className="overlay-custom-container"
                                >
                                                <div
                                                                className="edit-subcontainer__input"
                                                >
                                                                <label
                                                                                className="inputs__option-label"
                                                                >
                                                                                X
                                                                </label>
                                                                <input
                                                                                name="x"
                                                                                onChange={[Function]}
                                                                                type="text"
                                                                                value={10}
                                                                />
                                                </div>
                                                <div
                                                                className="edit-subcontainer__input"
                                                >
                                                                <label
                                                                                className="inputs__option-label"
                                                                >
                                                                                Y
                                                                </label>
                                                                <input
                                                                                name="y"
                                                                                onChange={[Function]}
                                                                                type="text"
                                                                                value={10}
                                                                />
                                                </div>
                                </div>
                </div>
</div>,
              false,
              <hr
                className="dialog__divider"
/>,
              <div
                className="dialog_bottom-bar"
>
                <div
                                className="bottom-bar__save"
                                onClick={[Function]}
                >
                                 Save 
                </div>
                <div
                                className="bottom-bar__cancel"
                                onClick={[Function]}
                >
                                 Cancel 
                </div>
</div>,
            ],
            "className": "edit-view__dialog-component",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <div
                    className="top-bar-container__title"
>
                     Edit View 
</div>,
                  <div
                    className="top-bar-container__escape"
                    onClick={[Function]}
>
                    <img
                                        alt="Close"
                                        src="close_icon.png"
                    />
</div>,
                ],
                "className": "dialog__top-bar-container",
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": " Edit View ",
                    "className": "top-bar-container__title",
                  },
                  "ref": null,
                  "rendered": " Edit View ",
                  "type": "div",
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": <img
                      alt="Close"
                      src="close_icon.png"
/>,
                    "className": "top-bar-container__escape",
                    "onClick": [Function],
                  },
                  "ref": null,
                  "rendered": Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "alt": "Close",
                      "src": "close_icon.png",
                    },
                    "ref": null,
                    "rendered": null,
                    "type": "img",
                  },
                  "type": "div",
                },
              ],
              "type": "div",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "className": "dialog__divider",
              },
              "ref": null,
              "rendered": null,
              "type": "hr",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <div
                    className="type-and-size-container__type-title"
>
                    Position (%)
</div>,
                  <div
                    className="overlay-custom-container"
>
                    <div
                                        className="overlay-custom-container"
                    >
                                        <div
                                                            className="edit-subcontainer__input"
                                        >
                                                            <label
                                                                                className="inputs__option-label"
                                                            >
                                                                                X
                                                            </label>
                                                            <input
                                                                                name="x"
                                                                                onChange={[Function]}
                                                                                type="text"
                                                                                value={10}
                                                            />
                                        </div>
                                        <div
                                                            className="edit-subcontainer__input"
                                        >
                                                            <label
                                                                                className="inputs__option-label"
                                                            >
                                                                                Y
                                                            </label>
                                                            <input
                                                                                name="y"
                                                                                onChange={[Function]}
                                                                                type="text"
                                                                                value={10}
                                                            />
                                        </div>
                    </div>
</div>,
                ],
                "className": "edit-view__content",
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": "Position (%)",
                    "className": "type-and-size-container__type-title",
                  },
                  "ref": null,
                  "rendered": "Position (%)",
                  "type": "div",
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": <div
                      className="overlay-custom-container"
>
                      <div
                                            className="edit-subcontainer__input"
                      >
                                            <label
                                                                  className="inputs__option-label"
                                            >
                                                                  X
                                            </label>
                                            <input
                                                                  name="x"
                                                                  onChange={[Function]}
                                                                  type="text"
                                                                  value={10}
                                            />
                      </div>
                      <div
                                            className="edit-subcontainer__input"
                      >
                                            <label
                                                                  className="inputs__option-label"
                                            >
                                                                  Y
                                            </label>
                                            <input
                                                                  name="y"
                                                                  onChange={[Function]}
                                                                  type="text"
                                                                  value={10}
                                            />
                      </div>
</div>,
                    "className": "overlay-custom-container",
                  },
                  "ref": null,
                  "rendered": Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "children": Array [
                        <div
                          className="edit-subcontainer__input"
>
                          <label
                                                    className="inputs__option-label"
                          >
                                                    X
                          </label>
                          <input
                                                    name="x"
                                                    onChange={[Function]}
                                                    type="text"
                                                    value={10}
                          />
</div>,
                        <div
                          className="edit-subcontainer__input"
>
                          <label
                                                    className="inputs__option-label"
                          >
                                                    Y
                          </label>
                          <input
                                                    name="y"
                                                    onChange={[Function]}
                                                    type="text"
                                                    value={10}
                          />
</div>,
                      ],
                      "className": "overlay-custom-container",
                    },
                    "ref": null,
                    "rendered": Array [
                      Object {
                        "instance": null,
                        "key": undefined,
                        "nodeType": "host",
                        "props": Object {
                          "children": Array [
                            <label
                              className="inputs__option-label"
>
                              X
</label>,
                            <input
                              name="x"
                              onChange={[Function]}
                              type="text"
                              value={10}
/>,
                          ],
                          "className": "edit-subcontainer__input",
                        },
                        "ref": null,
                        "rendered": Array [
                          Object {
                            "instance": null,
                            "key": undefined,
                            "nodeType": "host",
                            "props": Object {
                              "children": "X",
                              "className": "inputs__option-label",
                            },
                            "ref": null,
                            "rendered": "X",
                            "type": "label",
                          },
                          Object {
                            "instance": null,
                            "key": undefined,
                            "nodeType": "host",
                            "props": Object {
                              "name": "x",
                              "onChange": [Function],
                              "type": "text",
                              "value": 10,
                            },
                            "ref": null,
                            "rendered": null,
                            "type": "input",
                          },
                        ],
                        "type": "div",
                      },
                      Object {
                        "instance": null,
                        "key": undefined,
                        "nodeType": "host",
                        "props": Object {
                          "children": Array [
                            <label
                              className="inputs__option-label"
>
                              Y
</label>,
                            <input
                              name="y"
                              onChange={[Function]}
                              type="text"
                              value={10}
/>,
                          ],
                          "className": "edit-subcontainer__input",
                        },
                        "ref": null,
                        "rendered": Array [
                          Object {
                            "instance": null,
                            "key": undefined,
                            "nodeType": "host",
                            "props": Object {
                              "children": "Y",
                              "className": "inputs__option-label",
                            },
                            "ref": null,
                            "rendered": "Y",
                            "type": "label",
                          },
                          Object {
                            "instance": null,
                            "key": undefined,
                            "nodeType": "host",
                            "props": Object {
                              "name": "y",
                              "onChange": [Function],
                              "type": "text",
                              "value": 10,
                            },
                            "ref": null,
                            "rendered": null,
                            "type": "input",
                          },
                        ],
                        "type": "div",
                      },
                    ],
                    "type": "div",
                  },
                  "type": "div",
                },
              ],
              "type": "div",
            },
            false,
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "className": "dialog__divider",
              },
              "ref": null,
              "rendered": null,
              "type": "hr",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <div
                    className="bottom-bar__save"
                    onClick={[Function]}
>
                     Save 
</div>,
                  <div
                    className="bottom-bar__cancel"
                    onClick={[Function]}
>
                     Cancel 
</div>,
                ],
                "className": "dialog_bottom-bar",
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": " Save ",
                    "className": "bottom-bar__save",
                    "onClick": [Function],
                  },
                  "ref": null,
                  "rendered": " Save ",
                  "type": "div",
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": " Cancel ",
                    "className": "bottom-bar__cancel",
                    "onClick": [Function],
                  },
                  "ref": null,
                  "rendered": " Cancel ",
                  "type": "div",
                },
              ],
              "type": "div",
            },
          ],
          "type": "div",
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
